[package]
name = "rustchi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustchi-core = { path = "rustchi-core" }
rustchi-terminal = { path = "rustchi-terminal" }
crossterm = "0.27.0"

[workspace]
members = ["rustchi-core", "rustchi-terminal", "rustchi-wasm"]

[profile.dev]
overflow-checks = false

# [profile.release]
# debug = true
