[package]
name = "rustchi-terminal"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib"]
path = "src/terminal.rs"

[dependencies]
rustchi-core = { path = "../rustchi-core" }
ansi-escapes = "0.1.1"
ansi_term = "0.12.1"
clap = { version = "4.3.4", features = ["derive"] }
game_time = "0.2.0"
itertools = "0.10.5"
