[package]
name = "rustchi-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustchi-core = { path = "../rustchi-core" }
rustchi-terminal = { path = "../rustchi-terminal" }
console_error_panic_hook = "0.1.7"
js-sys = "0.3.63"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.36"
web-sys = {version = "0.3.63", features = ["console", "Request", "Response", "Window"]}
